tests/core/snapshots/test-input-with-arg-out.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
scalar Bytes

scalar Date

scalar DateTime

scalar Email

scalar Empty

scalar Int128

scalar Int16

scalar Int32

scalar Int64

scalar Int8

input IntFilter {
  i: Int
}

scalar JSON

type MyType {
  id: String!
  name(sf: StringFilter): String
  num(if: IntFilter): Int
}

scalar PhoneNumber

type Query {
  queryTest(filter: StringFilter): [MyType]
}

input StringFilter {
  s: String
}

scalar UInt128

scalar UInt16

scalar UInt32

scalar UInt64

scalar UInt8

scalar Url

schema {
  query: Query
}
