tests/core/snapshots/test-link-support.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
  @server(port: 8000)
  @upstream(baseURL: "http://localhost:50051", batch: {delay: 10, headers: [], maxSize: 1000})
  @link(id: "news", src: "news.proto", metadata: {description: "Test"}, type: Protobuf) {
  query: Query
}

input NewsInput {
  id: Int
}

type News {
  id: Int
}

type NewsData {
  news: [News]
}

type Query {
  newsById(news: NewsInput!): News! @grpc(body: "{{.args.news}}", method: "news.NewsService.GetNews")
}
