tests/core/snapshots/test-list-argument.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server(queryValidation: true) @upstream(baseURL: "http://localhost:3000") {
  query: Query
}

type Query {
  f1(q: [Int!]!): T1 @http(path: "/api", query: [{key: "q", value: "{{.args.q}}"}])
}

type T1 {
  numbers: [Int]
}
