tests/core/snapshots/test-merge-nested.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
snapshot_kind: text
---
schema @server @upstream {
  query: Query
}

type Foo {
  """
  test2
  """
  a: String
  """
  test1
  """
  b: String
}

type Query {
  hi: Foo @expr(body: "world") @expr(body: {a: "world"})
}
