tests/core/snapshots/test-merge-union.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
snapshot_kind: text
---
type Bar {
  bar: String
}

type Baz {
  baz: String
}

type Foo {
  a: String
  foo: String
}

union FooBar = Bar | Baz | Foo

type Query {
  foo: FooBar
}

schema {
  query: Query
}
